# monofon_ESP_6_4

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile.env  partitions.csv  script.env  sdkconfig  sdkconfig.backup  sdkconfig.old
components/WIFI/: CMakeLists.txt  WIFI.c
components/WIFI/include/: WIFI.h
components/audioPlayer/: CMakeLists.txt  audioPlayer.c
components/audioPlayer/include/: audioPlayer.h
components/ftp/: CMakeLists.txt  ftp.c
components/ftp/include/: ftp.h
components/leds/: CMakeLists.txt  component.mk  leds.c
components/leds/include/: leds.h
components/leds/ws2812_rmt_drv/: led_strip_rmt_ws2812.c
components/myMqtt/: .cproject  .project  CMakeLists.txt  myMqtt.c
components/myMqtt/include/: myMqtt.h
components/my_board/: CMakeLists.txt
components/my_board/my_board_v1_0/: board.c  board.h  board_def.h  board_pins_config.c
components/st7789/: CMakeLists.txt  st7789.c
components/stateConfig/: CMakeLists.txt  stateConfig.c
components/tusb/: CMakeLists.txt  CMakeLists_flags.txt
components/tusb/src/: board_p.h  esp32s3.c
components/tusb/src/class/cdc/: cdc_device.c
main/: CMakeLists.txt  cdc.c  cdc.h  cmd.c  cmd.h  freertos_hook.c  main.c  msc_disk.c  spisd.c  spisd.h  tusb_config.h  usb_descriptors.c
main/FreeRTOSConfig/: FreeRTOSConfig.h
sbin/: 0_menuconfig.sh  1_create_build.sh  2_build.sh  2_build_app.sh  2_dfu.sh  2_efuse_get_table  2_efuse_set_USB_PHY_SEL.sh  2_efuse_summary.sh  2_idf.sh  3_flash.sh  3_flash_all.bat  3_flash_all.sh  3_flash_all2.sh  3_flash_all_but_storage.sh  9_run.sh
(+5 files in other folders)
